# api/swagger/swagger.yaml
@@ -83,11 +83,10 @@ paths:
           description: Record updated
         "400":
           description: Bad request. Usually validation errors.
-
   /end-user:
     x-swagger-router-controller: end-user-controller
     get:
-      description: Returns a list of end usersGets all end users 
+      description: Returns a list of all end users 
       operationId: getAll
       responses:
         "200": 
@@ -135,6 +134,40 @@ paths:
           description: Success
         "400":
           description: Bad request.
+  /item:
+    x-swagger-router-controller: item-controller
+    post:
+      description: Creates an inventory item
+      operationId: create
+      parameters:
+        - name: item
+          in: body
+          description: item object
+          required: true
+          schema:
+            required:
+              - type_id
+              - brand_id
+              - model_no
+              - serial_no
+              - tag
+            properties:
+              type_id:
+                type: integer
+              brand_id:
+                type: integer
+              model_no:
+                type: string
+              serial_no:
+                type: string
+              tag:
+                type: string
+      responses:
+        "201":
+          description: Item created
+        "400":
+          description: Bad request. Usually validation errors.
+
   # This makes it so you can get the swagger file from /api/v1/swagger.
   /swagger:
     x-swagger-pipe: swagger_raw
